--- a/config/fog.yml
+++ b/config/fog.yml
@@ -8,3 +8,9 @@ development:
   access_key_id: AKIAI2WTSOAPR7WAFDCQ
   secret_access_key: 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
   bucket: bubboli_dev
+
+
+staging:
+  access_key_id: AKIAI2WTSOAPR7WAFDCQ
+  secret_access_key: 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
+  bucket: bubboli_dev
