--- a/config/database.yml
+++ b/config/database.yml
@@ -40,3 +40,13 @@ production:
   username: root
   password:
   socket: /tmp/mysql.sock
+
+staging:
+    adapter: mysql2
+    encoding: utf8
+    reconnect: false
+    database: bubboli_kids_staging
+    pool: 5
+    username: root
+    password:
+    socket: /tmp/mysql.sock
