--- a/config/fog.yml
+++ b/config/fog.yml
@@ -13,4 +13,4 @@ development:
 staging:
   access_key_id: AKIAI2WTSOAPR7WAFDCQ
   secret_access_key: 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
-  bucket: bubboli_dev
+  bucket: bubboli.dev
