--- a/config/fog.yml
+++ b/config/fog.yml
@@ -11,6 +11,6 @@ development:
 
 
 staging:
-  access_key_id: AKIAJ4ZKFIFTSOJZ62FA
-  secret_access_key: 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
-  bucket: bubboli_dev
+    access_key_id: AKIAI2WTSOAPR7WAFDCQ
+    secret_access_key: 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
+    bucket: bubboli_dev
